# extraclass_1_Tests

./: CMakeLists.txt  main.cpp
Interface/: MainWidget.cpp
Structures/: ClassName.h  Graph.h
include/: MyFunctions.h
lib/Tests/: ClassName.h  GraphTests.cpp  test.cpp
src/: MyFunctions.cpp
